# slg_desktop

./: .gitignore  LICENSE  README.rst  pyproject.toml
slg_desktop/: .env_template  Stores.ui  __init__.py  brands.ui  database.py  db.py  email.py  email_data.py  export.py  models.py  slg.py  stores.ui
slg_desktop/db/: database.py  models.py
slg_desktop/gui/: Brands.py  Categories.py  Items.py  MainWindow.py  ShoppingList.py  Stores.py  brands.py  brands.ui  categories.py  categories.ui  items.py  items.ui  mainwindow.py  mainwindow.ui  shoppinglist.py  shoppinglist.ui  stores.py  stores.ui
slg_desktop/output/: email.py
tests/: test_slg_desktop.py
