[tool.poetry]
name = "slg_desktop"
version = "0.1.0"
description = ""
authors = ["Calum Andrew Morrell <calum@drulum.com>"]

[tool.poetry.dependencies]
python = "~3.10"
PySide6 = "^6.2.3"
SQLAlchemy = "^1.4.32"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
