[tool.poetry]
name = "slg_desktop"
version = "0.1.0"
description = ""
authors = ["Calum Andrew Morrell <calum@drulum.com>"]

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
PySide6 = "^6.2.3"
SQLAlchemy = "^2.0.20"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
